After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698198 - Fingerprint configuring crashes Control Center
Fingerprint configuring crashes Control Center
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
3.10
: 699802 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-04-17 13:47 UTC by Arkady L. Shane
Modified: 2013-05-07 07:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
user-accounts: Fix fingerprint dialogue causing a crash (1.16 KB, patch)
2013-04-22 16:09 UTC, Bastien Nocera
committed Details | Review

Description Arkady L. Shane 2013-04-17 13:47:16 UTC
When I'm running

gnome-control-center user-accounts

and trying to configure fingerprint, Gnome Control Center crashes with:

---
$ LANG=C gnome-control-center user-accounts

(gnome-control-center:19950): user-accounts-cc-panel-ERROR **: The resource at '/org/gnome/control-center/account-fingerprint.ui' does not exist
Trace/breakpoint trap (core dumped)
---

account-fingerprint.ui was in GNOME 3.6 g-c-c, in 3.8 it is absent.
Comment 1 Bastien Nocera 2013-04-22 16:09:37 UTC
Created attachment 242145 [details] [review]
user-accounts: Fix fingerprint dialogue causing a crash

Loading the GtkBuilder file used the wrong GResource path.
Comment 2 Arkady L. Shane 2013-04-22 16:35:37 UTC
Thanks. It works fine!
Comment 3 Bastien Nocera 2013-04-23 14:01:31 UTC
Attachment 242145 [details] pushed as 713e475 - user-accounts: Fix fingerprint dialogue causing a crash
Comment 4 Bastien Nocera 2013-05-07 07:37:09 UTC
*** Bug 699802 has been marked as a duplicate of this bug. ***