user-accounts: Fix fingerprint dialogue causing a crash

Loading the GtkBuilder file used the wrong GResource path.

https://bugzilla.gnome.org/show_bug.cgi?id=698198